--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "evan/number-format",
+    "name": "evan_yxw/number-format",
     "description": "number",
     "authors": [
         {
-            "name": "evan",
+            "name": "evan_yxw",
             "email": "evan_yxw@126.com"
         }
     ],
